stopped videos from jumping, added padding under navigation

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -11,4 +11,8 @@
     src: local('segoe'), url(../fonts/seguiemj.ttf) format('truetype');
 }
 
+video {
+    height: inherit !important;
+}
+
 @tailwind utilities;
